# DashiShoyu

./: .gitignore  README.md  shell.nix
backend/server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  clean-up.sh  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  init.sh  server.Dockerfile  server.sh
backend/server/entity/src/: grand_parent_label_junction.rs  item.rs  label.rs  mod.rs  object.rs  object_tag_junction.rs  parent_label_junction.rs  prelude.rs  tag.rs
backend/server/migration/: Cargo.toml
backend/server/migration/src/: lib.rs  m20220101_000001_grand_parent_label_junction.rs  m20220101_000001_item.rs  m20220101_000001_label.rs  m20220101_000001_object.rs  m20220101_000001_object_tag_junction.rs  m20220101_000001_parent_label_junction.rs  m20220101_000001_tag.rs
backend/server/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  utils.rs
backend/server/src/error/: handler_error.rs
backend/server/src/handlers/: admin_handlers.rs  csv_handlers.rs  health_check_handler.rs  item_handlers.rs  object_handlers.rs  validate_visible_id_handlers.rs
backend/server/src/models/: item_models.rs  object_models.rs
client/: next.config.mjs  (+3 more)
server/: .env.example  .gitignore  Cargo.toml  docker-compose.yaml
server/entity/: Cargo.toml
server/entity/src/: item.rs  prelude.rs
server/migration/src/: lib.rs  m20220101_000001_item.rs
server/src/: lib.rs  main.rs  utils.rs
server/src/handlers/: item_handlers.rs
server/src/models/: item_models.rs
server/src/routes/: item_routes.rs
server/src/utils/: db.rs  image.rs  meilisearch.rs  r2.rs
(+32 files in other folders)
